content/_generated-doc/3.2/config/quarkus-reactive-db2-client-general-config-items.adoc

:summaryTableId: quarkus-reactive-db2-client-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-db2-client-general-config-items_configuration]]link:#quarkus-reactive-db2-client-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-db2-client-general-config-items_quarkus-datasource-reactive-db2-ssl]]`link:#quarkus-reactive-db2-client-general-config-items_quarkus-datasource-reactive-db2-ssl[quarkus.datasource.reactive.db2.ssl]`


[.description]
--
Whether SSL/TLS is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_DB2_SSL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_DB2_SSL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-reactive-db2-client-general-config-items_quarkus-datasource-named-data-sources-additional-named-datasources]]link:#quarkus-reactive-db2-client-general-config-items_quarkus-datasource-named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a| [[quarkus-reactive-db2-client-general-config-items_quarkus-datasource-datasource-name-reactive-db2-ssl]]`link:#quarkus-reactive-db2-client-general-config-items_quarkus-datasource-datasource-name-reactive-db2-ssl[quarkus.datasource."datasource-name".reactive.db2.ssl]`


[.description]
--
Whether SSL/TLS is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_DB2_SSL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_DB2_SSL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===